<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ This file is part of Dependency-Track.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  ~ SPDX-License-Identifier: Apache-2.0
  ~ Copyright (c) OWASP Foundation. All Rights Reserved.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.dependencytrack</groupId>
    <artifactId>dependency-track-parent</artifactId>
    <packaging>pom</packaging>
    <version>5.7.0-SNAPSHOT</version>

    <modules>
        <module>support/datanucleus-plugin</module>
        <module>support/liquibase</module>
        <module>support/smallrye-config-source-memory</module>
        <module>api</module>
        <module>alpine</module>
        <module>proto</module>
        <module>plugin/api</module>
        <module>plugin/vuln-data-source-github</module>
        <module>plugin/vuln-data-source-nvd</module>
        <module>plugin/vuln-data-source-osv</module>
        <module>persistence-migration</module>
        <module>persistence-jooq</module>
        <module>apiserver</module>
        <module>coverage-report</module>
    </modules>

    <name>Dependency-Track</name>
    <url>https://dependencytrack.org/</url>
    <description>Dependency-Track is an intelligent component analysis platform that allows organizations to identify
        and reduce risk in the software supply chain.
    </description>
    <inceptionYear>2013</inceptionYear>
    <organization>
        <name>OWASP</name>
    </organization>

    <licenses>
        <license>
            <name>Apache-2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Steve Springett</name>
            <email>Steve.Springett@owasp.org</email>
            <organization>OWASP</organization>
            <organizationUrl>http://www.owasp.org/</organizationUrl>
            <roles>
                <role>Architect</role>
                <role>Developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:git@github.com:DependencyTrack/hyades-apiserver.git</connection>
        <url>https://github.com/DependencyTrack/hyades-apiserver.git</url>
        <developerConnection>scm:git:git@github.com:DependencyTrack/hyades-apiserver.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <issueManagement>
        <system>github</system>
        <url>https://github.com/DependencyTrack/hyades/issues</url>
    </issueManagement>

    <ciManagement>
        <system>github-actions</system>
        <url>https://github.com/DependencyTrack/hyades-apiserver/actions</url>
    </ciManagement>

    <properties>
        <maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ss'Z'</maven.build.timestamp.format>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.parentBaseDir>.</project.parentBaseDir>

        <!-- Dependency versions -->
        <lib.assertj.version>3.27.6</lib.assertj.version>
        <lib.cel-java.version>0.5.3</lib.cel-java.version>
        <lib.cpe-parser.version>3.0.0</lib.cpe-parser.version>
        <lib.cvss-calculator.version>1.4.3</lib.cvss-calculator.version>
        <lib.datanucleus-api-jdo.version>6.0.5</lib.datanucleus-api-jdo.version>
        <lib.datanucleus-core.version>6.0.11</lib.datanucleus-core.version>
        <lib.datanucleus-javax-jdo.version>3.2.1</lib.datanucleus-javax-jdo.version>
        <lib.datanucleus-rdbms.version>6.0.10</lib.datanucleus-rdbms.version>
        <lib.httpclient5.version>5.5.1</lib.httpclient5.version>
        <lib.jakarta-ee.version>10.0.0</lib.jakarta-ee.version>
        <lib.java-uuid-generator.version>5.1.1</lib.java-uuid-generator.version>
        <lib.jackson.version>2.20.0</lib.jackson.version>
        <lib.jdbi.version>3.49.5</lib.jdbi.version>
        <lib.jersey.version>3.1.11</lib.jersey.version>
        <lib.jetty.version>12.1.2</lib.jetty.version>
        <lib.jooq.version>3.20.8</lib.jooq.version>
        <lib.json-unit.version>4.1.1</lib.json-unit.version>
        <lib.junit4.version>4.13.2</lib.junit4.version>
        <lib.junit-jupiter.version>6.0.0</lib.junit-jupiter.version>
        <lib.liquibase.version>4.33.0</lib.liquibase.version>
        <lib.mockito.version>5.20.0</lib.mockito.version>
        <lib.open-vulnerability-clients.version>9.0.1</lib.open-vulnerability-clients.version>
        <lib.postgresql.version>42.7.8</lib.postgresql.version>
        <lib.protobuf-java.version>4.32.1</lib.protobuf-java.version>
        <lib.slf4j.version>2.0.17</lib.slf4j.version>
        <lib.smallrye-config.version>3.14.1</lib.smallrye-config.version>
        <lib.testcontainers.version>1.21.3</lib.testcontainers.version>
        <lib.versatile.version>0.7.0</lib.versatile.version>
        <!-- Number of JVM processes to use for unit test parallelization -->
        <unitTestForkCount>2</unitTestForkCount>

        <!-- Log level to use for unit tests -->
        <unitTestLogLevel>WARN</unitTestLogLevel>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.assertj</groupId>
                <artifactId>assertj-core</artifactId>
                <version>${lib.assertj.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectnessie.cel</groupId>
                <artifactId>cel-bom</artifactId>
                <version>${lib.cel-java.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>us.springett</groupId>
                <artifactId>cpe-parser</artifactId>
                <version>${lib.cpe-parser.version}</version>
            </dependency>

            <dependency>
                <groupId>us.springett</groupId>
                <artifactId>cvss-calculator</artifactId>
                <version>${lib.cvss-calculator.version}</version>
            </dependency>

            <dependency>
                <groupId>org.datanucleus</groupId>
                <artifactId>datanucleus-api-jdo</artifactId>
                <version>${lib.datanucleus-api-jdo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.datanucleus</groupId>
                <artifactId>datanucleus-core</artifactId>
                <version>${lib.datanucleus-core.version}</version>
            </dependency>
            <dependency>
                <groupId>org.datanucleus</groupId>
                <artifactId>javax.jdo</artifactId>
                <version>${lib.datanucleus-javax-jdo.version}</version>
            </dependency>
            <dependency>
                <groupId>org.datanucleus</groupId>
                <artifactId>datanucleus-rdbms</artifactId>
                <version>${lib.datanucleus-rdbms.version}</version>
            </dependency>

            <dependency>
                <groupId>org.apache.httpcomponents.client5</groupId>
                <artifactId>httpclient5</artifactId>
                <version>${lib.httpclient5.version}</version>
            </dependency>

            <dependency>
                <groupId>jakarta.platform</groupId>
                <artifactId>jakarta.jakartaee-bom</artifactId>
                <version>${lib.jakarta-ee.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.uuid</groupId>
                <artifactId>java-uuid-generator</artifactId>
                <version>${lib.java-uuid-generator.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${lib.jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.jdbi</groupId>
                <artifactId>jdbi3-bom</artifactId>
                <version>${lib.jdbi.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.glassfish.jersey</groupId>
                <artifactId>jersey-bom</artifactId>
                <version>${lib.jersey.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-bom</artifactId>
                <version>${lib.jetty.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.eclipse.jetty.ee10</groupId>
                <artifactId>jetty-ee10-bom</artifactId>
                <version>${lib.jetty.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.jooq</groupId>
                <artifactId>jooq</artifactId>
                <version>${lib.jooq.version}</version>
            </dependency>

            <dependency>
                <groupId>net.javacrumbs.json-unit</groupId>
                <artifactId>json-unit-assertj</artifactId>
                <version>${lib.json-unit.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${lib.junit4.version}</version>
            </dependency>

            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${lib.junit-jupiter.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.liquibase</groupId>
                <artifactId>liquibase-core</artifactId>
                <version>${lib.liquibase.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-bom</artifactId>
                <version>${lib.mockito.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>io.github.jeremylong</groupId>
                <artifactId>open-vulnerability-clients</artifactId>
                <version>${lib.open-vulnerability-clients.version}</version>
            </dependency>

            <dependency>
                <groupId>org.postgresql</groupId>
                <artifactId>postgresql</artifactId>
                <version>${lib.postgresql.version}</version>
            </dependency>

            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java</artifactId>
                <version>${lib.protobuf-java.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.protobuf</groupId>
                <artifactId>protobuf-java-util</artifactId>
                <version>${lib.protobuf-java.version}</version>
            </dependency>

            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${lib.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-nop</artifactId>
                <version>${lib.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-simple</artifactId>
                <version>${lib.slf4j.version}</version>
            </dependency>

            <dependency>
                <groupId>io.smallrye.config</groupId>
                <artifactId>smallrye-config-bom</artifactId>
                <version>${lib.smallrye-config.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-bom</artifactId>
                <version>${lib.testcontainers.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>

            <dependency>
                <groupId>io.github.nscuro</groupId>
                <artifactId>versatile</artifactId>
                <version>${lib.versatile.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.extensions</groupId>
                <artifactId>maven-build-cache-extension</artifactId>
                <version>1.2.0</version>
            </extension>
        </extensions>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.1</version>
                    <configuration>
                        <source>21</source>
                        <target>21</target>
                        <compilerArgs>
                            <arg>-Xlint:all</arg>
                            <arg>-Xlint:-processing</arg>
                            <arg>-Xlint:-serial</arg>
                            <arg>-parameters</arg>
                        </compilerArgs>
                        <!--
                          https://stackoverflow.com/a/76392489
                          https://issues.apache.org/jira/browse/MCOMPILER-209
                        -->
                        <useIncrementalCompilation>false</useIncrementalCompilation>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                    <configuration>
                        <argLine>
                            @{argLine}
                            -Xmx512m
                            --add-opens java.base/java.util=ALL-UNNAMED
                            --add-opens java.base/java.lang=ALL-UNNAMED
                        </argLine>
                        <reuseForks>true</reuseForks>
                        <forkCount>${unitTestForkCount}</forkCount>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.13</version>
                </plugin>

                <plugin>
                    <groupId>org.datanucleus</groupId>
                    <artifactId>datanucleus-maven-plugin</artifactId>
                    <version>6.0.0-release</version>
                    <dependencies>
                        <!--
                          The DataNucleus Enhancer still depends on SLF4J 1.x and will
                          fail if that version is not present.
                        -->
                        <dependency>
                            <groupId>org.slf4j</groupId>
                            <artifactId>slf4j-nop</artifactId>
                            <version>1.7.36</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.6.0</version>
                <configuration>
                    <configLocation>${project.parentBaseDir}/.checkstyle.xml</configLocation>
                    <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    <includeResources>false</includeResources>
                    <includeTestResources>false</includeTestResources>
                    <propertyExpansion>
                        parentBaseDir=${project.parentBaseDir}
                    </propertyExpansion>
                </configuration>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>12.0.1</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>quick</id>
            <activation>
                <property>
                    <name>quickly</name>
                </property>
            </activation>
            <properties>
                <checkstyle.skip>true</checkstyle.skip>
                <jacoco.skip>true</jacoco.skip>
                <maven.test.skip>true</maven.test.skip>
            </properties>
        </profile>

        <profile>
            <id>github-actions</id>
            <activation>
                <property>
                    <name>env.GITHUB_ACTIONS</name>
                    <value>true</value>
                </property>
            </activation>
            <properties>
                <unitTestForkCount>1C</unitTestForkCount>
                <unitTestLogLevel>OFF</unitTestLogLevel>
            </properties>
        </profile>
    </profiles>
</project>
